infra/ec2.tf
# 1. 최신 Ubuntu 24.04 AMI(운영체제 이미지)를 자동으로 찾아주는 코드
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical (Ubuntu 공식 배포자 ID)

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }
}


# 3. 퍼블릭 서브넷에 위치할 베스천 호스트 EC2 생성
resource "aws_instance" "bastion" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.micro"

  subnet_id              = aws_subnet.public_c.id
  vpc_security_group_ids = [aws_security_group.bastion.id]

  key_name                    = "bobpick-key-0914"
  associate_public_ip_address = true

  iam_instance_profile = aws_iam_instance_profile.ssm_profile.name

  tags = {
    Name = "bobpick-public-bastion"
  }
}

# 4. 베스천 호스트 퍼블릭 IP 화면 출력
output "bastion_public_ip" {
  description = "베스천 호스트 접속용 퍼블릭 IP"
  value       = aws_instance.bastion.public_ip
}
